@@ -1,18 +1,10 @@
 package org.apereo.cas;
 
-import lombok.SneakyThrows;
-import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
 import org.apereo.cas.audit.spi.config.CasCoreAuditConfiguration;
-import org.apereo.cas.authentication.Authentication;
-import org.apereo.cas.authentication.AuthenticationResult;
-import org.apereo.cas.authentication.AuthenticationResultBuilder;
 import org.apereo.cas.authentication.CoreAuthenticationTestUtils;
 import org.apereo.cas.authentication.DefaultAuthenticationResultBuilder;
 import org.apereo.cas.authentication.PrincipalElectionStrategy;
-import org.apereo.cas.authentication.principal.Principal;
 import org.apereo.cas.authentication.principal.SimpleWebApplicationServiceImpl;
-import org.apereo.cas.config.CasApplicationContextConfiguration;
 import org.apereo.cas.config.CasCoreAuthenticationConfiguration;
 import org.apereo.cas.config.CasCoreAuthenticationHandlersConfiguration;
 import org.apereo.cas.config.CasCoreAuthenticationMetadataConfiguration;
@@ -32,7 +24,6 @@ import org.apereo.cas.config.CasDefaultServiceTicketIdGeneratorsConfiguration;
 import org.apereo.cas.config.CasFiltersConfiguration;
 import org.apereo.cas.config.CasPersonDirectoryConfiguration;
 import org.apereo.cas.config.CasPropertiesConfiguration;
-import org.apereo.cas.config.CasSecurityContextConfiguration;
 import org.apereo.cas.config.CasWebAppConfiguration;
 import org.apereo.cas.config.support.CasWebApplicationServiceFactoryConfiguration;
 import org.apereo.cas.configuration.CasConfigurationProperties;
@@ -46,8 +37,13 @@ import org.apereo.cas.web.config.CasSupportActionsConfiguration;
 import org.apereo.cas.web.flow.config.CasCoreWebflowConfiguration;
 import org.apereo.cas.web.flow.config.CasWebflowContextConfiguration;
 import org.apereo.cas.web.support.WebUtils;
+
+import lombok.SneakyThrows;
+import lombok.val;
+import org.apache.commons.io.IOUtils;
+import org.junit.ClassRule;
+import org.junit.Rule;
 import org.junit.Test;
-import org.junit.runner.RunWith;
 import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -62,23 +58,24 @@ import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
 import org.springframework.mock.web.MockServletContext;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit4.rules.SpringClassRule;
+import org.springframework.test.context.junit4.rules.SpringMethodRule;
 import org.springframework.webflow.action.AbstractAction;
 import org.springframework.webflow.context.servlet.ServletExternalContext;
 import org.springframework.webflow.core.collection.LocalAttributeMap;
-import org.springframework.webflow.core.collection.MutableAttributeMap;
 import org.springframework.webflow.execution.Action;
 import org.springframework.webflow.execution.Event;
 import org.springframework.webflow.execution.RequestContext;
 import org.springframework.webflow.executor.FlowExecutor;
 import org.springframework.webflow.test.MockRequestContext;
 
-import java.io.InputStreamReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.TreeMap;
 import java.util.concurrent.ConcurrentSkipListSet;
 
@@ -90,48 +87,49 @@ import static org.junit.Assert.*;
  * @author Misagh Moayyed
  * @since 5.0.0
  */
-@RunWith(SpringRunner.class)
-@SpringBootTest(
-    classes = {CasApplicationContextConfiguration.class,
-        CasThemesConfiguration.class,
-        CasFiltersConfiguration.class,
-        CasPropertiesConfiguration.class,
-        CasSecurityContextConfiguration.class,
-        CasWebAppConfiguration.class,
-        CasWebflowServerSessionContextConfigurationTests.TestWebflowContextConfiguration.class,
-        CasWebflowContextConfiguration.class,
-        CasDefaultServiceTicketIdGeneratorsConfiguration.class,
-        CasWebApplicationServiceFactoryConfiguration.class,
-        CasCoreWebflowConfiguration.class,
-        CasCoreAuthenticationConfiguration.class, CasCoreServicesAuthenticationConfiguration.class,
-        CasCoreAuthenticationPrincipalConfiguration.class,
-        CasCoreAuthenticationPolicyConfiguration.class,
-        CasCoreAuthenticationMetadataConfiguration.class,
-        CasCoreAuthenticationSupportConfiguration.class,
-        CasCoreAuthenticationHandlersConfiguration.class,
-        CasCoreHttpConfiguration.class,
-        CasCoreTicketsConfiguration.class,
-        CasCoreTicketCatalogConfiguration.class,
-        CasLoggingConfiguration.class,
-        CasCoreServicesConfiguration.class,
-        CasSupportActionsConfiguration.class,
-        CasCoreUtilConfiguration.class,
-        CasCoreLogoutConfiguration.class,
-        CasCookieConfiguration.class,
-        CasCoreWebConfiguration.class,
-        CasCoreValidationConfiguration.class,
-        CasCoreConfiguration.class,
-        CasCoreAuthenticationServiceSelectionStrategyConfiguration.class,
-        CasCoreAuditConfiguration.class,
-        CasPersonDirectoryConfiguration.class,
-        AopAutoConfiguration.class,
-        RefreshAutoConfiguration.class
-    })
+@SpringBootTest(classes = {
+    CasThemesConfiguration.class,
+    CasFiltersConfiguration.class,
+    CasPropertiesConfiguration.class,
+    CasWebAppConfiguration.class,
+    CasWebflowServerSessionContextConfigurationTests.TestWebflowContextConfiguration.class,
+    CasWebflowContextConfiguration.class,
+    CasDefaultServiceTicketIdGeneratorsConfiguration.class,
+    CasWebApplicationServiceFactoryConfiguration.class,
+    CasCoreWebflowConfiguration.class,
+    CasCoreAuthenticationConfiguration.class, CasCoreServicesAuthenticationConfiguration.class,
+    CasCoreAuthenticationPrincipalConfiguration.class,
+    CasCoreAuthenticationPolicyConfiguration.class,
+    CasCoreAuthenticationMetadataConfiguration.class,
+    CasCoreAuthenticationSupportConfiguration.class,
+    CasCoreAuthenticationHandlersConfiguration.class,
+    CasCoreHttpConfiguration.class,
+    CasCoreTicketsConfiguration.class,
+    CasCoreTicketCatalogConfiguration.class,
+    CasLoggingConfiguration.class,
+    CasCoreServicesConfiguration.class,
+    CasSupportActionsConfiguration.class,
+    CasCoreUtilConfiguration.class,
+    CasCoreLogoutConfiguration.class,
+    CasCookieConfiguration.class,
+    CasCoreWebConfiguration.class,
+    CasCoreValidationConfiguration.class,
+    CasCoreConfiguration.class,
+    CasCoreAuthenticationServiceSelectionStrategyConfiguration.class,
+    CasCoreAuditConfiguration.class,
+    CasPersonDirectoryConfiguration.class,
+    AopAutoConfiguration.class,
+    RefreshAutoConfiguration.class
+})
 @EnableConfigurationProperties(CasConfigurationProperties.class)
 @EnableAspectJAutoProxy(proxyTargetClass = true)
 @TestPropertySource(properties = "spring.aop.proxy-target-class=true")
-@Slf4j
 public abstract class BaseCasWebflowSessionContextConfigurationTests {
+    @ClassRule
+    public static final SpringClassRule SPRING_CLASS_RULE = new SpringClassRule();
+
+    @Rule
+    public final SpringMethodRule springMethodRule = new SpringMethodRule();
 
     @Test
     public void verifyExecutorsAreBeans() {
@@ -140,34 +138,34 @@ public abstract class BaseCasWebflowSessionContextConfigurationTests {
 
     @Test
     public void verifyFlowExecutorByClient() {
-        final RequestContext ctx = getMockRequestContext();
-        final LocalAttributeMap map = new LocalAttributeMap<>();
+        val ctx = getMockRequestContext();
+        val map = new LocalAttributeMap<>();
         getFlowExecutor().launchExecution("login", map, ctx.getExternalContext());
     }
 
     @Test
     public void verifyCasPropertiesAreAvailableInView() {
-        final MockRequestContext ctx = getMockRequestContext();
-        final LocalAttributeMap map = new LocalAttributeMap<>();
+        val ctx = getMockRequestContext();
+        val map = new LocalAttributeMap<>();
         getFlowExecutor().launchExecution("login", map, ctx.getExternalContext());
         assertResponseWrittenEquals("classpath:expected/end.html", ctx);
     }
 
     @SneakyThrows(IOException.class)
     protected void assertResponseWrittenEquals(final String response, final MockRequestContext context) {
-        final MockHttpServletResponse nativeResponse = (MockHttpServletResponse) context.getExternalContext().getNativeResponse();
+        val nativeResponse = (MockHttpServletResponse) context.getExternalContext().getNativeResponse();
 
         assertEquals(
-                IOUtils.toString(new InputStreamReader(ResourceUtils.getResourceFrom(response).getInputStream(), StandardCharsets.UTF_8)),
-                nativeResponse.getContentAsString()
+            IOUtils.toString(new InputStreamReader(ResourceUtils.getResourceFrom(response).getInputStream(), StandardCharsets.UTF_8)),
+            nativeResponse.getContentAsString()
         );
     }
 
     private MockRequestContext getMockRequestContext() {
-        final MockRequestContext ctx = new MockRequestContext();
-        final MockHttpServletRequest request = new MockHttpServletRequest();
-        final MockHttpServletResponse response = new MockHttpServletResponse();
-        final MockServletContext sCtx = new MockServletContext();
+        val ctx = new MockRequestContext();
+        val request = new MockHttpServletRequest();
+        val response = new MockHttpServletResponse();
+        val sCtx = new MockServletContext();
         ctx.setExternalContext(new ServletExternalContext(sCtx, request, response));
         return ctx;
     }
@@ -191,14 +189,14 @@ public abstract class BaseCasWebflowSessionContextConfigurationTests {
             return new AbstractAction() {
                 @Override
                 protected Event doExecute(final RequestContext requestContext) {
-                    final MutableAttributeMap<Object> flowScope = requestContext.getFlowScope();
+                    val flowScope = requestContext.getFlowScope();
                     flowScope.put("test", TEST);
                     flowScope.put("test0", Collections.singleton(TEST));
                     flowScope.put("test1", Collections.singletonList(TEST));
                     flowScope.put("test2", Collections.singletonMap(TEST, TEST));
                     flowScope.put("test3", Arrays.asList(TEST, TEST));
                     flowScope.put("test4", new ConcurrentSkipListSet());
-                    flowScope.put("test5", Collections.unmodifiableList(Arrays.asList("test1")));
+                    flowScope.put("test5", List.of("test1"));
                     flowScope.put("test6", Collections.unmodifiableSet(Collections.singleton(1)));
                     flowScope.put("test7", Collections.unmodifiableMap(new HashMap<>()));
                     flowScope.put("test8", Collections.emptyMap());
@@ -206,17 +204,17 @@ public abstract class BaseCasWebflowSessionContextConfigurationTests {
                     flowScope.put("test10", Collections.emptySet());
                     flowScope.put("test11", Collections.emptyList());
 
-                    final SimpleWebApplicationServiceImpl service = new SimpleWebApplicationServiceImpl();
+                    val service = new SimpleWebApplicationServiceImpl();
                     service.setId(CoreAuthenticationTestUtils.CONST_TEST_URL);
                     service.setOriginalUrl(CoreAuthenticationTestUtils.CONST_TEST_URL);
                     service.setArtifactId(null);
 
-                    final Authentication authentication = CoreAuthenticationTestUtils.getAuthentication();
-                    final AuthenticationResultBuilder authenticationResultBuilder = new DefaultAuthenticationResultBuilder();
-                    final Principal principal = CoreAuthenticationTestUtils.getPrincipal();
+                    val authentication = CoreAuthenticationTestUtils.getAuthentication();
+                    val authenticationResultBuilder = new DefaultAuthenticationResultBuilder();
+                    val principal = CoreAuthenticationTestUtils.getPrincipal();
                     authenticationResultBuilder.collect(authentication);
                     authenticationResultBuilder.collect(CoreAuthenticationTestUtils.getCredentialsWithSameUsernameAndPassword());
-                    final AuthenticationResult authenticationResult = authenticationResultBuilder.build(principalElectionStrategy.getIfAvailable(), service);
+                    val authenticationResult = authenticationResultBuilder.build(principalElectionStrategy.getIfAvailable(), service);
 
                     WebUtils.putAuthenticationResultBuilder(authenticationResultBuilder, requestContext);
                     WebUtils.putAuthenticationResult(authenticationResult, requestContext);
